# graphlint

./: .gitignore  README.md  SHECKYRSELF_SPEC.md  main.py  playground.py  pyproject.toml  uml.html
examples/: movies.shacl.ttl  movies.shex
graphlint/: __init__.py  parser.py  runner.py  shacl_parser.py
graphlint/backends/: __init__.py  cypher.py  gql.py  python_schema.py
templates/: playground.html
tests/: conftest.py  test_pipeline.py  test_shacl_pipeline.py
