[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphlint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyshexc",
    "ShExJSG",
    "rdflib>=7.0",
    "neo4j",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
